change the title

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <title>Backgrounder</title>
+    <title>Scroll the Universe</title>
 </head>
 
 <body>
